--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
-name = "auto-validate-by-history-clone"
+name = "miautawn-auto-validate-by-history"
 version = "0.1.0"
-description = ""
+description = "Automatic data quality validation for data pipelines"
 authors = ["miautawn <miautawn@gmail.com>"]
 packages = [
   {include = "avh", from = "src"},
 ]
 readme = "README.md"
+repository = "https://github.com/Miautawn/Auto-Validate-By-History-Clone"
+keywords = ["data", "quality", "pipeline"]
 
 [tool.poetry.dependencies]
 python = ">=3.9"
@@ -16,7 +18,6 @@ numpy = "^1.26.4"
 scikit-learn = "^1.4.2"
 tqdm = "^4.66.2"
 statsmodels = "^0.14.1"
-gutenbergpy = "^0.3.5"
 joblib = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -52,8 +53,7 @@ module = [
   "sklearn.*",
   "tqdm.*",
   "scipy.*",
-  "joblib.*",
-  "gutenbergpy.*",
+  "joblib.*"
 ]
 
 [tool.autoflake]
